--- a/src/assets/css/reponsive-scream.css
+++ b/src/assets/css/reponsive-scream.css
@@ -6,6 +6,21 @@
     width: 100%;
     height: 100%;
   }
+  .btns img:nth-last-child(1) {
+    width: 75px;
+  }
+  .bh-odd {
+    width: 90px;
+    height: 80px;
+  }
+  .bh-even {
+    width: 120px;
+    height: 96px;
+  }
+
+  .icon-color {
+    font-size: 35px;
+  }
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -15,8 +30,8 @@
     background: #b5e3ae;
   }
   .layout-detail {
-    width: 34rem;
-    height: 100%;
+    width: 100%;
+    height: 100vh;
   }
   .phone-login,
   .email-login,
@@ -24,28 +39,9 @@
   .create-profile {
     padding: 18px;
   }
-  .footer-body {
-    gap: 50px;
-    font-size: 44px;
-  }
-
-  .btns {
-    min-width: 450px !important;
-  }
-  .btns img:nth-child(2n + 1) {
-    width: 85px !important;
-  }
-
-  .btns img:nth-child(2n) {
-    width: 100px !important;
-  }
 
   .size-hight {
     width: 66px;
-  }
-
-  .top-dash-explore {
-    top: 10rem;
   }
 
   .h-likes {
@@ -84,28 +80,9 @@
   .create-profile {
     padding: 26px;
   }
-  .footer-body {
-    gap: 50px;
-    font-size: 44px;
-  }
-
-  .btns {
-    min-width: 450px !important;
-  }
-  .btns img:nth-child(2n + 1) {
-    width: 85px !important;
-  }
-
-  .btns img:nth-child(2n) {
-    width: 100px !important;
-  }
 
   .size-hight {
     width: 66px;
-  }
-
-  .top-dash-explore {
-    top: 10rem;
   }
 
   .h-likes {
@@ -158,32 +135,12 @@
   }
 
   .layout-detail {
-    width: 34rem;
-    height: 100%;
-  }
-
-  .footer-body {
-    gap: 50px;
-    font-size: 44px;
-  }
-
-  .btns {
-    min-width: 450px !important;
-  }
-  .btns img:nth-child(2n + 1) {
-    width: 85px !important;
-  }
-
-  .btns img:nth-child(2n) {
-    width: 100px !important;
+    width: 530px;
+    height: 930px;
   }
 
   .size-hight {
     width: 66px;
-  }
-
-  .top-dash-explore {
-    top: 10rem;
   }
 
   .h-likes {
@@ -213,38 +170,32 @@
   .layout-web {
     background: rgb(131, 131, 212);
   }
+  /* w-h: layout */
   .layout-detail {
-    width: 34rem;
-    height: 100%;
+    max-width: 500px;
+    height: 930px;
   }
-
-  .footer-body {
-    gap: 56px;
-    font-size: 46px;
+  /* w-h: btn: like,back,supper-like,... */
+  .btns img:nth-last-child(1) {
+    width: 88px;
+  }
+  .bh-odd {
+    width: 100px;
+  }
+  .bh-even {
+    width: 136px;
+  }
+  /* w-h: footer - icon */
+  .icon-color {
+    font-size: 35px;
   }
 
   .body-page-home {
     height: 80%;
   }
 
-  .btns {
-    min-width: 500px !important;
-    gap: 8px;
-  }
-  .btns img:nth-child(2n + 1) {
-    width: 85px !important;
-  }
-
-  .btns img:nth-child(2n) {
-    width: 100px !important;
-  }
-
   .size-hight {
     width: 66px;
-  }
-
-  .top-dash-explore {
-    top: 10rem;
   }
 
   .h-likes {
@@ -267,10 +218,6 @@
 
   .w-button {
     width: 76%;
-  }
-  /* Css detail user */
-  .icon-close-infor {
-    top: 31.5rem;
   }
 
   /* setting */
