--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -295,6 +295,54 @@
   padding: 8px;
 }
 .border-interest-checked {
-  border-radius: 20px;
-  border: 1.5px solid #ffffff;
+  border-radius: 8px;
+  border: 1.5px solid #95a1b8;
+  color: #95a1b8;
+}
+
+/* text cố định */
+
+.title-dialog {
+  font-size: 26px;
+  font-weight: 700;
+  padding: 10px 0 10px 0;
+  letter-spacing: 0.5px;
+}
+.describe-dialog {
+  font-size: 16px;
+  padding: 10px 0 10px 0;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+.name-option-dialog {
+  font-size: 18px;
+  padding: 10px 0 10px 0;
+  font-weight: 700;
+  letter-spacing: 0.5px;
+}
+.style-option-click {
+  font-size: 15px;
+  letter-spacing: 0.5px;
+  border: 1.4px solid #ffffff;
+  border-radius: 8px;
+  padding: 0.35rem;
+  margin-bottom: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+/* icon */
+.ic-option {
+  color: #929db9;
+  font-size: 1.25rem;
+}
+
+/* border */
+.bor-bottom {
+  border-bottom: 1px solid #5f6a86;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+.bor-bottom-not {
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
