--- a/src/assets/css/reponsive-scream.css
+++ b/src/assets/css/reponsive-scream.css
@@ -105,7 +105,7 @@
   .w-form-life {
     width: 30rem;
     height: 80%;
-    background-color: #434a5d;
+    background-color: #3b445c;
   }
 
   .h-title-close {
