--- a/src/assets/css/txt-common.css
+++ b/src/assets/css/txt-common.css
@@ -33,10 +33,10 @@
 /* Border */
 
 .bd-input {
-  border-bottom: 1px solid #5e6580;
+  border-bottom: 1px solid #d0d1e2;
 }
 .bd-input-top {
-  border-top: 1px solid #5e6580;
+  border-top: 1px solid #d0d1e2;
 }
 .size-icon-hello {
   font-size: 40px;
