--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -81,4 +81,16 @@
       rgba(240, 233, 233, 0) 22%
     );
   }
+
+  .el-textarea__inner,
+  .el-input__inner {
+    border-radius: 10px !important;
+    background-color: var(--color-from) !important;
+    color: var(--color-title) !important;
+    border: 1px solid var(--color-from) !important;
+  }
+
+  .color-button-default {
+    color: var(--color-text);
+  }
 }
