--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -23,6 +23,8 @@
   --color-describe-setup: #5e6a85;
   --color-placeholder-input: #747f9a;
   --color-from: #495063;
+  --color-dialog: #434a5d;
+  --color-border-bottom: #eae9ee;
 }
 
 .theme-dark {
@@ -32,6 +34,9 @@
   // login
   .describe-text {
     color: var(--color-describe);
+  }
+  .bg-color-default {
+    background-color: var(--bg-color);
   }
 
   .button-default {
@@ -57,7 +62,6 @@
     border: 1.4px solid var(--color-border-button-active);
     color: var(--color-border-button-active);
   }
-
   // Home
   .title-default {
     color: var(--color-title);
@@ -65,8 +69,58 @@
   .border-default {
     border: 1.5px solid var(--color-border-button-select);
   }
+  .border-login {
+    border-radius: 10px;
+    border: 1.5px solid var(--color-border-button-sign);
+  }
 
   .bg-default {
     background-color: var(--color-from);
+  }
+
+  .bg-dialog-default {
+    background-color: var(--color-dialog);
+  }
+  .bg-border-bottom {
+    border-bottom: 1px solid var(--color-border-bottom);
+  }
+
+  .bh-chevron-right {
+    color: var(--color-icon) !important;
+  }
+
+  .bg-shadow-right {
+    background: rgb(73, 80, 99);
+    background: linear-gradient(
+      270deg,
+      var(--color-from) 7%,
+      rgba(240, 233, 233, 0) 22%
+    );
+  }
+
+  .el-textarea__inner,
+  .el-input__inner {
+    border-radius: 10px !important;
+    background-color: var(--color-from) !important;
+    color: var(--color-title) !important;
+    border: 1px solid var(--color-from) !important;
+  }
+
+  .color-button-default {
+    color: var(--color-text);
+  }
+
+  .el-slider__runway {
+    height: 3px !important;
+    background-color: #ccd1e2 !important;
+  }
+
+  .iti__country-list {
+    background-color: var(--color-from) !important;
+  }
+
+  .border-image {
+    border-radius: 10px;
+    border: 1px solid var(--color-border-button-select);
   }
 }
