--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -25,6 +25,7 @@
   --color-from: #495063;
   --color-dialog: #434a5d;
   --color-border-bottom: #eae9ee;
+  --color-focus-code: #e7e9f5;
 }
 
 .theme-dark {
@@ -122,5 +123,10 @@
   .border-image {
     border-radius: 10px;
     border: 1px solid var(--color-border-button-select);
+  }
+
+  .digit-box:focus {
+    background-color: var(--color-focus-code);
+    outline: none;
   }
 }
