--- a/src/assets/css/txt-common.css
+++ b/src/assets/css/txt-common.css
@@ -53,3 +53,11 @@
 .el-input {
   font-size: 16px !important;
 }
+
+.pic {
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+}
