--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -40,6 +40,9 @@
   .bg-color-default {
     background-color: var(--bg-color);
   }
+  .color-text-default {
+    color: var(--color-text);
+  }
 
   .button-default {
     background-color: var(--color-button-default);
