--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -61,3 +61,20 @@
   background-position: bottom;
   background-repeat: no-repeat;
 }
+.style-form {
+  align-items: center;
+  border-radius: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+}
+
+.bg-life {
+  border-radius: 10px;
+  /* padding: 15px; */
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
