--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -78,3 +78,11 @@
   padding-top: 12px;
   padding-bottom: 12px;
 }
+
+.style-form-single {
+  border-radius: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
