--- a/src/assets/css/reponsive-scream.css
+++ b/src/assets/css/reponsive-scream.css
@@ -128,6 +128,9 @@
   .header-detail {
     height: 10%;
   }
+  .header-detail-item {
+    height: 8%;
+  }
 
   .body-detail {
     height: 78%;
@@ -195,6 +198,10 @@
     height: 10%;
   }
 
+  .header-detail-item {
+    height: 8%;
+  }
+
   .body-detail {
     height: 78%;
   }
@@ -258,6 +265,10 @@
   /* setting */
   .header-detail {
     height: 10%;
+  }
+
+  .header-detail-item {
+    height: 8%;
   }
 
   .body-detail {
