--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -129,7 +129,7 @@
 
   .border-image {
     border-radius: 10px;
-    border: 1px solid var(--color-border-button-select);
+    border: 1px solid var(--color-border-bottom);
   }
 
   .digit-box:focus {
