--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -133,6 +133,12 @@
   font-weight: 500;
 }
 
+.padding-describe-like{
+  font-size: 18px;
+  padding: 5px 0 0 0;
+  font-weight: 500;
+}
+
 .padding-describe-item {
   font-size: 14px;
   font-weight: 500;
