--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -40,8 +40,9 @@
   .bg-color-default {
     background-color: var(--bg-color);
   }
-  .color-text-default {
-    color: var(--color-text);
+
+  .color-title-default {
+    color: var(--color-title);
   }
 
   .button-default {
