--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -27,6 +27,7 @@
   --color-border-bottom: #383d50;
   --color-focus-code: #e7e9f5;
   --color-top-bottom: #616a7f;
+  --color-radio: #ffffff;
 }
 
 .theme-dark {
