--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -199,6 +199,13 @@
   margin-bottom: 2px;
 }
 
+.padding-default-option {
+  width: 100%;
+  border-radius: 15px;
+  font-size: 8px;
+  padding: 6px 20px 6px 20px;
+}
+
 .font-title {
   font-size: 28px;
   font-weight: 600;
