--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -26,7 +26,7 @@
   --color-dialog: #ffffff;
   --color-border-bottom: #eae9ee;
   --color-focus-code: #e7e9f5;
-  --color-top-bottom: #f6f7f9;
+  --color-top-bottom: #ccd2e2;
   --color-radio: #000000;
 }
 
@@ -140,10 +140,10 @@
   }
 
   .border-top {
-    border-top: 2px solid var(--color-top-bottom);
+    border-top: 1px solid var(--color-top-bottom);
   }
   .border-bottom {
-    border-bottom: 2px solid var(--color-top-bottom);
+    border-bottom: 1px solid var(--color-top-bottom);
   }
 
   .fa-circle {
