--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -86,3 +86,9 @@
   padding-top: 12px;
   padding-bottom: 12px;
 }
+
+.border-form {
+  border-radius: 10px;
+  border: 1px solid #dce0e9; /* Đường viền của thẻ */
+  box-shadow: 0px 0px 5px rgba(153, 153, 153, 0.3); /* Hiệu ứng đổ bóng */
+}
