--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -191,6 +191,11 @@
   padding: 5px 0 5px 0;
 }
 
+.padding-describe-option-none {
+  font-size: 18px;
+  font-weight: 500;
+}
+
 .padding-check-option {
   width: 100%;
   padding: 18px;
