--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -11,7 +11,7 @@
   --color-input-bg: #495063;
   --color-input-text: #929db8;
   --color-input-focus: #ffffff;
-  --color-border-button-sign: #242a38;
+  --color-border-button-sign: #0084ff;
   --color-border-button-select: #ffffff;
   --color-border-button-active: #fd5d65;
   --color-text-error: #ff0a09;
