--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -99,6 +99,15 @@
   .bg-shadow-right {
     background: rgb(73, 80, 99);
     background: linear-gradient(
+      92deg,
+      var(--color-from) 7%,
+      rgba(240, 233, 233, 0) 22%
+    );
+  }
+
+  .bg-shadow-left {
+    background: rgb(73, 80, 99);
+    background: linear-gradient(
       270deg,
       var(--color-from) 7%,
       rgba(240, 233, 233, 0) 22%
