--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -57,9 +57,9 @@
 .pic {
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: bottom;
   background-repeat: no-repeat;
+  background-position: 50% 9.33827%;
+  background-size: 120.755%;
 }
 .style-form {
   align-items: center;
