--- a/src/assets/css/reponsive-scream.css
+++ b/src/assets/css/reponsive-scream.css
@@ -6,6 +6,12 @@
     width: 100%;
     height: 100%;
   }
+  .phone-login,
+  .email-login,
+  .welcome,
+  .create-profile {
+    padding: 18px;
+  }
   .btns img:nth-last-child(1) {
     width: 75px;
   }
@@ -19,11 +25,15 @@
   }
 
   .icon-color {
-    font-size: 35px;
+    font-size: 30px;
   }
   .option-setting {
     gap: 30px;
     height: calc(100% - 70%);
+  }
+
+  .w-button {
+    width: 76%;
   }
 }
 
@@ -45,7 +55,7 @@
   }
 
   .size-hight {
-    width: 66px;
+    width: 50px;
   }
 
   .h-likes {
@@ -91,7 +101,7 @@
   }
   /* w-h: footer - icon */
   .icon-color {
-    font-size: 35px;
+    font-size: 30px;
   }
 
   .body-page-home {
@@ -99,7 +109,7 @@
   }
 
   .size-hight {
-    width: 66px;
+    width: 50px;
   }
 
   .h-likes {
@@ -160,7 +170,7 @@
   }
   /* w-h: footer - icon */
   .icon-color {
-    font-size: 35px;
+    font-size: 30px;
   }
 
   .body-page-home {
@@ -168,7 +178,7 @@
   }
 
   .size-hight {
-    width: 66px;
+    width: 50px;
   }
 
   .h-likes {
@@ -229,7 +239,7 @@
   }
   /* w-h: footer - icon */
   .icon-color {
-    font-size: 35px;
+    font-size: 30px;
   }
 
   .body-page-home {
@@ -237,7 +247,7 @@
   }
 
   .size-hight {
-    width: 66px;
+    width: 50px;
   }
 
   .h-likes {
