--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -39,6 +39,9 @@
   .describe-text {
     color: var(--color-describe);
   }
+  .value-error {
+    color: var(--color-text-error);
+  }
   .bg-color-default {
     background-color: var(--bg-color);
   }
