--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -11,7 +11,10 @@
   font-size: 18px;
   letter-spacing: 1px;
 }
-
+.text-age {
+  font-size: 22px;
+  padding-top: 3px;
+}
 .title-item {
   font-size: 18px;
   letter-spacing: 1px;
