--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -130,6 +130,16 @@
   font-weight: 500;
 }
 
+.title-dialog-question {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.describe-dialog-question {
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .padding-describe-title {
   font-size: 18px;
   font-weight: 500;
