--- a/src/assets/css/reponsive-scream.css
+++ b/src/assets/css/reponsive-scream.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 360px) {
   .layout-web {
-    background: #801aba;
+    background: #ffffff;
   }
   .layout-detail {
     width: 100%;
@@ -41,7 +41,6 @@
 
 @media only screen and (min-width: 600px) {
   .layout-web {
-    background: #b5e3ae;
   }
   .layout-detail {
     width: 100%;
@@ -82,7 +81,6 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
   .layout-web {
-    background: #9fd2e3;
   }
   /* w-h: layout */
   .layout-detail {
@@ -150,7 +148,6 @@
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .layout-web {
-    background: #fd5d65;
   }
 
   /* w-h: layout */
@@ -220,7 +217,6 @@
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
   .layout-web {
-    background: rgb(131, 131, 212);
   }
   /* w-h: layout */
   .layout-detail {
