--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -395,3 +395,34 @@
   padding: 15px;
   border-radius: 10px;
 }
+
+.style-package-update {
+  background: linear-gradient(
+    321deg,
+    rgba(68, 114, 103, 1) 23%,
+    rgba(177, 238, 225, 1) 50%,
+    rgba(68, 114, 103, 1) 76%
+  );
+  padding: 5px;
+  width: 138px;
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.style-package-big-size {
+  background: linear-gradient(
+    321deg,
+    rgba(68, 114, 103, 1) 23%,
+    rgba(177, 238, 225, 1) 50%,
+    rgba(68, 114, 103, 1) 76%
+  );
+  padding: 5px;
+  width: 102px;
+  display: flex;
+  justify-content: center;
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 13px;
+}
