--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -46,6 +46,10 @@
     background-color: var(--bg-color);
   }
 
+  .bg-color-dialog {
+    background-color: var(--color-dialog);
+  }
+
   .button-default {
     background-color: var(--color-button-default);
     color: var(--color-button-text);
