--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -29,6 +29,8 @@
   --color-top-bottom: #616a7f;
   --color-radio: #ffffff;
   --color-verified: #1c92ff;
+
+  --orange-color: #f7a800;
 }
 
 .theme-dark {
