--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -29,6 +29,8 @@
   --color-top-bottom: #ccd2e2;
   --color-radio: #000000;
   --color-verified: #1c92ff;
+
+  --orange-color: #f7a800;
 }
 
 .theme-light {
