--- a/src/assets/css/dark-them.scss
+++ b/src/assets/css/dark-them.scss
@@ -25,7 +25,7 @@
   --color-from: #495063;
   --color-dialog: #434a5d;
   --color-border-bottom: #383d50;
-  --color-focus-code: #e7e9f5;
+  --color-focus-code: #e7e9f578;
   --color-top-bottom: #616a7f;
   --color-radio: #ffffff;
   --color-verified: #1c92ff;
