--- a/src/assets/css/light-theme.scss
+++ b/src/assets/css/light-theme.scss
@@ -25,7 +25,7 @@
   --color-from: #eef1f8;
   --color-dialog: #ffffff;
   --color-border-bottom: #eae9ee;
-  --color-focus-code: #e7e9f5;
+  --color-focus-code: #e7e9f578;
   --color-top-bottom: #ccd2e2;
   --color-radio: #000000;
   --color-verified: #1c92ff;
