--- a/src/assets/css/txt-common.scss
+++ b/src/assets/css/txt-common.scss
@@ -120,3 +120,17 @@
 .bh-pd {
   padding: 0.35rem;
 }
+
+.w-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 200px;
+}
+
+.w-ellipsis-about {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+}
